--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,10 @@
 [mypy]
 python_version = 3.12
 strict = True
+mypy_path = $MYPY_CONFIG_FILE_DIR/src
+plugins = mypy_django_plugin.main
 
 # Per-module options:
+
+[mypy.plugins.django-stubs]
+django_settings_module = "src.backend.settings"
