--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.8.1
+attrs==23.2.0
 Django==5.0.6
+django-stubs==5.0.2
+django-stubs-ext==5.0.2
+iniconfig==2.0.0
 mypy==1.10.0
 mypy-extensions==1.0.0
+packaging==24.1
+pluggy==1.5.0
+pytest==8.2.2
+pytest-django==4.8.0
 ruff==0.4.10
 sqlparse==0.5.0
+types-PyYAML==6.0.12.20240311
 typing_extensions==4.12.2
