Domain layer: write create_item operation, mappers, and dtos, and test
Domain layer: fix commit

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,10 +3,10 @@
 [mypy]
 python_version = 3.12
 strict = True
-mypy_path = $MYPY_CONFIG_FILE_DIR/src
+mypy_path = src
 plugins = mypy_django_plugin.main
 
 # Per-module options:
 
 [mypy.plugins.django-stubs]
-django_settings_module = "src.backend.settings"
+django_settings_module = "backend.settings"
