--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,9 @@
 python_version = 3.12
 strict = True
 mypy_path = src
-plugins = mypy_django_plugin.main
+plugins =
+    mypy_django_plugin.main,
+    mypy_drf_plugin.main
 
 # Per-module options:
 
